# tnviewer

./: .gitignore  Archiv.txt  CNAME  Cargo.toml  EinstellungenDefault.json  LegendeTest.XLSX  README.md  build-debug.sh  build.bat  build.rs  build.sh  index.html  leafletdraw.html  licenses.html  licenses.json  licenses.py  main.css  nutzung.json  out.txt  postbuild.py  skeleton.html  temp.tar  test.js
.github/workflows/: build.yml
doc/: Handbuch.html
js/: coordinate-conversion.js  fixup.js  fixup2.js  select-map.js
js/custom/: custom.js  ui.js
js/leaflet/: leaflet.snap.js
js/leaflet_07/: leaflet.draw.js  leaflet.js
licenses/: Apache-2.0.de.txt  BSD-3-Clause.de.txt  BSD-3-Clause.txt  BSL-1.0.de.txt  BSL-1.0.txt  ISC.de.txt  MIT.de.txt  MPL-2.0.de.txt
pkg/: aaa_preferences_xlsx.d.ts  aaa_preferences_xlsx.js  aaa_preferences_xlsx_bg.wasm  aaa_preferences_xlsx_bg.wasm.d.ts  package.json  tnviewer.js  tnviewer_bg.js  tnviewer_bg.wasm
src/: 25833.prj  analyze.rs  antrag.xml  csv.rs  david.rs  dxf.rs  geograf.rs  grafbat_header.txt  lib.rs  nas.rs  ops.rs  optimize.rs  optimize_labels.rs  pdf.rs  process.rs  search.rs  test.txt  ui.rs  uuid_wasm.rs  xlsx.rs  xml.rs  zip.rs
src/xml_templates/: .gitignore  antragsbegleitblatt_document.xml  antragsbegleitblatt_flurstuecke.xml  antragsbegleitblatt_row.xml  bearbeitungsliste_header.xml  bearbeitungsliste_row.xml  bearbeitungsliste_sheet1.xml  fortfuehrungsbeleg_document.xml  legende_sharedstrings.xml  legende_sheet1.xml  mod.rs
temp/docProps/: app.xml  core.xml
temp/xl/: sharedStrings.xml  styles.xml  workbook.xml
temp/xl/worksheets/: sheet1.xml
