[package]
name = "tnviewer"
description = "A sample project with wasm-pack"
version = "0.1.0"
authors = []
license = "MIT/Apache-2.0"
repository = "https://github.com/fschutt/aaa-preferences-xlsx"
edition = "2021"
publish = false
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[profile.release]
strip = true 
opt-level = 'z'
lto = true

[build-dependencies]
uneval = "*"
serde_derive = "1.0.203"
serde = "1.0.203"
serde_json = "1.0.120"

[dependencies]
wasm-bindgen = "0.2"
simple_excel_writer = "0.2.0"
quick-xml = "0.22.0"
encoding_rs = "0.8.30"
chardetng = "0.1.17"
xmlparser = "0.13.6"
serde_derive = "1.0.203"
serde_json = "1.0.120"
serde = "1.0.203"
base64 = "0.22.1"
proj4rs = "0.1.3"
printpdf = { git = "https://github.com/fschutt/printpdf", rev = "fbc7d691f988b0d295570bee072de932f4cabda2" }
