[package]
name = "tnviewer"
description = "A sample project with wasm-pack"
version = "0.1.0"
authors = []
license = "MIT/Apache-2.0"
repository = "https://github.com/fschutt/aaa-preferences-xlsx"
edition = "2021"
publish = false
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[profile.release]
strip = true 
opt-level = 'z'
lto = true

[build-dependencies]
uneval = "*"
serde_derive = "1.0.203"
serde = "1.0.203"
serde_json = "1.0.120"

[dependencies]
wasm-bindgen = "0.2"
simple_excel_writer = "0.2.0"
quick-xml = "0.22.0"
encoding_rs = "0.8.30"
chardetng = "0.1.17"
xmlparser = "0.13.6"
serde_derive = "1.0.203"
serde_json = "1.0.120"
serde = "1.0.203"
base64 = "0.22.1"
proj4rs = { git = "https://github.com/fschutt/proj4rs", rev = "86d94292bc67179fb91fb30cf68e45ee5d8494a2" } 
printpdf = { git = "https://github.com/fschutt/printpdf", rev = "fbc7d691f988b0d295570bee072de932f4cabda2", default-features = false, features = ["js-sys", "embedded_images"] }
polylabel-mini = "0.1.0"
quadtree-f32 = { version = "0.4.1", features = ["f64"] }
geo = { version = "0.28.0", features = ["earcutr"] }
rand = { version = "0.8.5", default-features = false }
rand_xorshift = "0.3.0"
csscolorparser = { version = "0.6.2", default-features = false }
random_color = { git = "https://github.com/fschutt/random_color", rev = "b14528ce854f2dfc2f9763708eb1d015b4822470" }
dxf = { git = "https://github.com/fschutt/dxf-rs", rev = "68b8ab4b4b4f43033cb9aae5e041702484f7b016" }
shapefile = { git = "https://github.com/fschutt/shapefile-rs", rev = "af49c4a93e9304174c4e62d8bb0942fcd1d4822a" }
zip = { version = "2.1.5", default-features = false, features = ["deflate"] }
dbase = { git = "https://github.com/fschutt/dbase-rs", default-features = false, rev = "e76b8aa74e97febc07a4eac39868d727bfccfa41" }
web-sys = { version = "0.3.69", features = ["console"] }
float-cmp = "0.9.0"
ab_glyph = "0.2.28"
geo-rasterize = "0.1.2"
ndarray = "0.15"
highway = "1.2.0"
bresenham = "0.1.1"
image = { version = "0.24.9", default-features = false, features = ["jpeg", "png", "gif"] }
reqwest = { version = "0.12.7", default-features = false, features = ["default-tls", "blocking"] }
wasm-bindgen-futures = "0.4.43"
futures = "0.3.30"
html-escape = "0.2.13"
